--- a/data/tables/AI/animals_are_everywhere_urban_beast_friends.json
+++ b/data/tables/AI/animals_are_everywhere_urban_beast_friends.json
@@ -64,5 +64,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Resources",
+  "sub_category": "Companions & Familiars",
+  "tags": [
+    "Animals",
+    "Urban",
+    "Beasts",
+    "Player Options",
+    "Companions"
   ]
 }
