--- a/data/tables/BGG/appendix_b_adventure_hooks_adventure_hooks.json
+++ b/data/tables/BGG/appendix_b_adventure_hooks_adventure_hooks.json
@@ -12,183 +12,183 @@
       ],
       "rows": [
         [
-          "01–02",
+          "01\u201302",
           "{@book Cloud Giant Wealth|BGG|2|Cloud Giant Wealth} (chapter 2, \"{@book The Ordning|BGG|2|The Ordning}\")"
         ],
         [
-          "03–04",
+          "03\u201304",
           "{@book Fire Giant Skill|BGG|2|Fire Giant Skill} (chapter 2, \"{@book The Ordning|BGG|2|The Ordning}\")"
         ],
         [
-          "05–06",
+          "05\u201306",
           "{@book Frost Giant Might|BGG|2|Frost Giant Might} (chapter 2, \"{@book The Ordning|BGG|2|The Ordning}\")"
         ],
         [
-          "07–08",
+          "07\u201308",
           "{@book Stone Giant Artistry|BGG|2|Stone Giant Artistry} (chapter 2, \"{@book The Ordning|BGG|2|The Ordning}\")"
         ],
         [
-          "09–11",
+          "09\u201311",
           "{@book Rejecting the Ordning|BGG|2|Rejecting the Ordning} (chapter 2, \"{@book The Ordning|BGG|2|The Ordning}\")"
         ],
         [
-          "12–14",
+          "12\u201314",
           "{@book Annam's Children Adventures|BGG|2|Annam's Children Adventures} (chapter 2, \"{@book Gods and Religion|BGG|2|Gods and Religion}\")"
         ],
         [
-          "15–17",
+          "15\u201317",
           "{@book Interloper Gods Adventures|BGG|2|Interloper Gods Adventures} (chapter 2, \"{@book Gods and Religion|BGG|2|Gods and Religion}\")"
         ],
         [
-          "18–20",
+          "18\u201320",
           "{@book Recluses|BGG|2|Recluses} (chapter 2, \"{@book Social Structures|BGG|2|Social Structures}\")"
         ],
         [
-          "21–23",
+          "21\u201323",
           "{@book Exiles|BGG|2|Exiles} (chapter 2, \"{@book Social Structures|BGG|2|Social Structures}\")"
         ],
         [
-          "24–25",
+          "24\u201325",
           "{@book Bands|BGG|2|Bands} (chapter 2, \"{@book Social Structures|BGG|2|Social Structures}\")"
         ],
         [
-          "26–27",
+          "26\u201327",
           "{@book Families|BGG|2|Families} (chapter 2, \"{@book Social Structures|BGG|2|Social Structures}\")"
         ],
         [
-          "28–29",
+          "28\u201329",
           "{@book Steadings|BGG|2|Steadings} (chapter 2, \"{@book Social Structures|BGG|2|Social Structures}\")"
         ],
         [
-          "30–31",
+          "30\u201331",
           "{@book Settlements|BGG|2|Settlements} (chapter 2, \"{@book Social Structures|BGG|2|Social Structures}\")"
         ],
         [
-          "32–33",
+          "32\u201333",
           "{@book Hidden Rune Adventures|BGG|2|Hidden Rune Adventures} (chapter 2, \"{@book Organizations|BGG|2|Organizations}\")"
         ],
         [
-          "34–35",
+          "34\u201335",
           "{@book Eternal Throne Adventures|BGG|2|Eternal Throne Adventures} (chapter 2, \"{@book Organizations|BGG|2|Organizations}\")"
         ],
         [
-          "36–37",
+          "36\u201337",
           "{@book Worldroot Circle Adventures|BGG|2|Worldroot Circle Adventures} (chapter 2, \"{@book Organizations|BGG|2|Organizations}\")"
         ],
         [
-          "38–40",
+          "38\u201340",
           "{@book Against the Giants|BGG|3|Against the Giants} (chapter 3, \"{@book Adventure Models|BGG|3|Adventure Models}\")"
         ],
         [
-          "41–43",
+          "41\u201343",
           "{@book Clash of Titans|BGG|3|Clash of Titans} (chapter 3, \"{@book Adventure Models|BGG|3|Adventure Models}\")"
         ],
         [
-          "44–46",
+          "44\u201346",
           "{@book Delve into the Past|BGG|3|Delve into the Past} (chapter 3, \"{@book Adventure Models|BGG|3|Adventure Models}\")"
         ],
         [
-          "47–49",
+          "47\u201349",
           "{@book Giant-Sized Schemes|BGG|3|Giant-Sized Schemes} (chapter 3, \"{@book Adventure Models|BGG|3|Adventure Models}\")"
         ],
         [
-          "50–52",
+          "50\u201352",
           "{@book Into the Giant Realms|BGG|3|Into the Giant Realms} (chapter 3, \"{@book Adventure Models|BGG|3|Adventure Models}\")"
         ],
         [
-          "53–54",
+          "53\u201354",
           "{@book Boss Assignments|BGG|3|Boss Assignments} (chapter 3, \"{@book Giant Patrons|BGG|3|Giant Patrons}\")"
         ],
         [
-          "55–56",
+          "55\u201356",
           "{@book Financier Assignments|BGG|3|Financier Assignments} (chapter 3, \"{@book Giant Patrons|BGG|3|Giant Patrons}\")"
         ],
         [
-          "57–58",
+          "57\u201358",
           "{@book Seer Assignments|BGG|3|Seer Assignments} (chapter 3, \"{@book Giant Patrons|BGG|3|Giant Patrons}\")"
         ],
         [
-          "59–60",
+          "59\u201360",
           "{@book Sovereign Assignments|BGG|3|Sovereign Assignments} (chapter 3, \"{@book Giant Patrons|BGG|3|Giant Patrons}\")"
         ],
         [
-          "61–62",
+          "61\u201362",
           "{@book Tutor Assignments|BGG|3|Tutor Assignments} (chapter 3, \"{@book Giant Patrons|BGG|3|Giant Patrons}\")"
         ],
         [
-          "63–64",
+          "63\u201364",
           "{@book Warleader Assignments|BGG|3|Warleader Assignments} (chapter 3, \"{@book Giant Patrons|BGG|3|Giant Patrons}\")"
         ],
         [
-          "65–66",
+          "65\u201366",
           "{@book Annam's Cradle Adventures|BGG|4|Annam's Cradle Adventures} ({@book chapter 4|BGG|4|Annam's Cradle})"
         ],
         [
-          "67–68",
+          "67\u201368",
           "{@book Ashen Grotto Adventures|BGG|4|Ashen Grotto Adventures} ({@book chapter 4|BGG|4|Ashen Grotto})"
         ],
         [
-          "69–70",
+          "69\u201370",
           "{@book Dreamer's Reach Adventures|BGG|4|Dreamer's Reach Adventures} ({@book chapter 4|BGG|4|Dreamer's Reach})"
         ],
         [
-          "71–72",
+          "71\u201372",
           "{@book Endless Rockslide Adventures|BGG|4|Endless Rockslide Adventures} ({@book chapter 4|BGG|4|Endless Rockslide})"
         ],
         [
-          "73–74",
+          "73\u201374",
           "{@book Forest Crystal Adventures|BGG|4|Forest Crystal Adventures} ({@book chapter 4|BGG|4|Forest Crystal})"
         ],
         [
-          "75–76",
+          "75\u201376",
           "{@book Forsaken Deep Adventures|BGG|4|Forsaken Deep Adventures} ({@book chapter 4|BGG|4|Forsaken Deep})"
         ],
         [
-          "77–78",
+          "77\u201378",
           "{@book Gale's Eye Tower Adventures|BGG|4|Gale's Eye Tower Adventures} ({@book chapter 4|BGG|4|Gale's Eye Tower})"
         ],
         [
-          "79–80",
+          "79\u201380",
           "{@book Grolantor's Larder Adventures|BGG|4|Grolantor's Larder Adventures} ({@book chapter 4|BGG|4|Grolantor's Larder})"
         ],
         [
-          "81–82",
+          "81\u201382",
           "{@book Hiatea's Hearth Adventures|BGG|4|Hiatea's Hearth Adventures} ({@book chapter 4|BGG|4|Hiatea's Hearth})"
         ],
         [
-          "83–84",
+          "83\u201384",
           "{@book Horizon's Edge Adventures|BGG|4|Horizon's Edge Adventures} ({@book chapter 4|BGG|4|Horizon's Edge})"
         ],
         [
-          "85–86",
+          "85\u201386",
           "{@book Howling Iceberg Adventures|BGG|4|Howling Iceberg Adventures} ({@book chapter 4|BGG|4|Howling Iceberg})"
         ],
         [
-          "87–88",
+          "87\u201388",
           "{@book Karontor's Hold Adventures|BGG|4|Karontor's Hold Adventures} ({@book chapter 4|BGG|4|Karontor's Hold})"
         ],
         [
-          "89–90",
+          "89\u201390",
           "{@book Misty Vale Adventures|BGG|4|Misty Vale Adventures} ({@book chapter 4|BGG|4|Misty Vale})"
         ],
         [
-          "91–92",
+          "91\u201392",
           "{@book Runic Circle Adventures|BGG|4|Runic Circle Adventures} ({@book chapter 4|BGG|4|Runic Circle})"
         ],
         [
-          "93–94",
+          "93\u201394",
           "{@book Singing Sands Adventures|BGG|4|Singing Sands Adventures} ({@book chapter 4|BGG|4|Singing Sands})"
         ],
         [
-          "95–96",
+          "95\u201396",
           "{@book Star Forge Adventures|BGG|4|Star Forge Adventures} ({@book chapter 4|BGG|4|Star Forge})"
         ],
         [
-          "97–98",
+          "97\u201398",
           "{@book Thundering Observatory Adventures|BGG|4|Thundering Observatory Adventures} ({@book chapter 4|BGG|4|Thundering Observatory})"
         ],
         [
-          "99–00",
+          "99\u201300",
           "{@book Worldroot Sapling Adventures|BGG|4|Worldroot Sapling Adventures} ({@book chapter 4|BGG|4|Worldroot Sapling})"
         ]
       ],
@@ -204,5 +204,14 @@
         "index": 8
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Adventure Hooks",
+  "tags": [
+    "Adventure Starters",
+    "Campaign Ideas",
+    "Story Inspiration",
+    "DM Tools",
+    "The Ordning"
   ]
 }
