--- a/data/tables/EGW/backstory_eastern_wynandir_settlements.json
+++ b/data/tables/EGW/backstory_eastern_wynandir_settlements.json
@@ -76,5 +76,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Resources",
+  "sub_category": "Character Creation",
+  "tags": [
+    "Backstory",
+    "Settlements",
+    "Character Options",
+    "Eastern Wynandir",
+    "Locations"
   ]
 }
