--- a/data/tables/ERLW/fernia_the_sea_of_fire_fernia_manifest_zone_features.json
+++ b/data/tables/ERLW/fernia_the_sea_of_fire_fernia_manifest_zone_features.json
@@ -40,5 +40,15 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Environment Features",
+  "tags": [
+    "Eberron",
+    "Fernia",
+    "Manifest Zone",
+    "Fire",
+    "Elementals",
+    "Enchantments"
   ]
 }
