--- a/data/tables/ERLW/daanvi_the_perfect_order_daanvi_manifest_zone_features.json
+++ b/data/tables/ERLW/daanvi_the_perfect_order_daanvi_manifest_zone_features.json
@@ -40,5 +40,14 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Eberron Adventures",
+  "tags": [
+    "Daanvi",
+    "Manifest Zone",
+    "Features",
+    "Building Eberron Adventures",
+    "The Last War"
   ]
 }
