--- a/data/tables/ERLW/dolurrh_the_realm_of_the_dead_dolurrh_manifest_zone_features.json
+++ b/data/tables/ERLW/dolurrh_the_realm_of_the_dead_dolurrh_manifest_zone_features.json
@@ -40,5 +40,15 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Locations & Realms",
+  "tags": [
+    "Eberron",
+    "Dolurrh",
+    "Manifest Zone",
+    "Necromancy",
+    "Undead",
+    "Spells"
   ]
 }
