--- a/data/tables/ERLW/dragonmark_appearance_dragonmark_quirks.json
+++ b/data/tables/ERLW/dragonmark_appearance_dragonmark_quirks.json
@@ -56,5 +56,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Character Creation",
+  "sub_category": "Dragonmarks",
+  "tags": [
+    "Dragonmark Appearance",
+    "Dragonmark Quirks",
+    "Character Traits",
+    "Role-playing",
+    "Character Customization"
   ]
 }
