--- a/data/tables/ERLW/irian_the_eternal_dawn_irian_manifest_zone_features.json
+++ b/data/tables/ERLW/irian_the_eternal_dawn_irian_manifest_zone_features.json
@@ -13,7 +13,7 @@
       "rows": [
         [
           "1",
-          "The waters of a spring hold curative powers—curing disease, healing wounds, even restoring lost senses."
+          "The waters of a spring hold curative powers\u2014curing disease, healing wounds, even restoring lost senses."
         ],
         [
           "2",
@@ -40,5 +40,15 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Environment Features",
+  "tags": [
+    "Eberron",
+    "Irian",
+    "Manifest Zone",
+    "Healing",
+    "Radiant Damage",
+    "Undead"
   ]
 }
