--- a/data/tables/ERLW/kythri_the_churning_chaos_kythri_manifest_zone_features.json
+++ b/data/tables/ERLW/kythri_the_churning_chaos_kythri_manifest_zone_features.json
@@ -40,5 +40,15 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Environment Features",
+  "tags": [
+    "Kythri",
+    "Manifest Zone",
+    "Terrain",
+    "Eberron",
+    "Chaos",
+    "Adventure Building"
   ]
 }
