--- a/data/tables/ERLW/lamannia_the_twilight_forest_lamannia_manifest_zone_features.json
+++ b/data/tables/ERLW/lamannia_the_twilight_forest_lamannia_manifest_zone_features.json
@@ -40,5 +40,15 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Eberron Adventures",
+  "tags": [
+    "Lamannia",
+    "Manifest Zone",
+    "Elementals",
+    "Nature",
+    "Eberron",
+    "Adventure Building"
   ]
 }
