--- a/data/tables/ERLW/shavarath_the_battleground_shavarath_manifest_zone_features.json
+++ b/data/tables/ERLW/shavarath_the_battleground_shavarath_manifest_zone_features.json
@@ -40,5 +40,14 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Locations",
+  "tags": [
+    "Eberron",
+    "Shavarath",
+    "Manifest Zone",
+    "Features",
+    "The Last War"
   ]
 }
