--- a/data/tables/ERLW/the_villain_you_know_villain_you_know.json
+++ b/data/tables/ERLW/the_villain_you_know_villain_you_know.json
@@ -48,5 +48,14 @@
         "index": 9
       }
     }
+  ],
+  "top_category": "Campaigns",
+  "sub_category": "Villain Creation",
+  "tags": [
+    "Eberron",
+    "Adventure Building",
+    "Villains",
+    "NPCs",
+    "Storytelling"
   ]
 }
