--- a/data/tables/ERLW/what_happens_next_lower_sharn_street_events.json
+++ b/data/tables/ERLW/what_happens_next_lower_sharn_street_events.json
@@ -12,143 +12,143 @@
       ],
       "rows": [
         [
-          "01–02",
+          "01\u201302",
           "A {@creature minotaur} holding a large piece of wood that could serve as a maul approaches you and politely asks if you have any copper to spare."
         ],
         [
-          "03–04",
+          "03\u201304",
           "Down a nearby alleyway, a dwarf punches a {@creature goblin} in the stomach, then walks away laughing."
         ],
         [
-          "05–08",
+          "05\u201308",
           "A thin human child has been following you, but never gets too close. She keeps coughing, and you can see red marks on her neck that might be an aberrant dragonmark."
         ],
         [
-          "09–10",
+          "09\u201310",
           "A human {@creature priest} of Boldrei wheels a cart of bread loaves through the city, giving food to the homeless."
         ],
         [
-          "11–15",
+          "11\u201315",
           "A {@creature goblin} pushing a cart of rusty weapons and broken clay pots calls out, \"Real artifacts of ancient Dhakaan for sale! Recovered from the ruins below!\""
         ],
         [
-          "16–18",
+          "16\u201318",
           "A man dressed in the livery of House Vadalis descends a tower wall mounted on the back of a {@creature giant spider}. He shouts, \"Need a ride? No faster way to get to the middle and upper wards! Reasonable rates!\""
         ],
         [
-          "19–22",
+          "19\u201322",
           "An {@creature ogre} eating several rats on a skewer spits out a rodent skull at your feet."
         ],
         [
-          "23–26",
+          "23\u201326",
           "A playful stray {@creature mastiff} wags its tail as it approaches, drops a very large egg at your feet, and looks up expectantly."
         ],
         [
-          "27–30",
+          "27\u201330",
           "A small, jovial crowd gathers around a {@creature goblin} and a {@creature kobold} that are getting ready to have an arm wrestling match. A dwarf calls for the crowd to place their bets."
         ],
         [
-          "31–34",
+          "31\u201334",
           "Three {@creature Harpy||harpies} fly through the streets singing a jolly drinking song. Each carries a bucket around her neck, and passersby occasionally drop coins in one."
         ],
         [
-          "35–38",
+          "35\u201338",
           "A human woman and a warforged with a silvered body are walking down the street together. They're too well dressed for this district, and are looking around as if lost."
         ],
         [
-          "39–42",
+          "39\u201342",
           "A Khoravar half-elf in the robes of an oracle approaches and promises to give you the answer to all of life's problems for 42 copper crowns."
         ],
         [
-          "43–44",
+          "43\u201344",
           "A human and an elf kiss passionately in an alley near your path. They notice you and quickly move apart."
         ],
         [
-          "45–46",
+          "45\u201346",
           "Three shifter children run by you, yelling and chasing each other with wooden swords. They duck into a boarded-up building."
         ],
         [
-          "47–48",
+          "47\u201348",
           "\"Stop her! She stole my necklace!\" a priest of the Sovereign Host cries, pointing to a grimy halfling clutching a silver chain and climbing up the side of a tower."
         ],
         [
-          "49–50",
+          "49\u201350",
           "A young woman using a crutch and missing a leg approaches, asking if you can spare any coin to help a Brelish veteran of the Last War."
         ],
         [
-          "51–52",
+          "51\u201352",
           "Cries of alarm fill the street as a wooden crate from somewhere above crashes down into the lower city."
         ],
         [
-          "53–56",
+          "53\u201356",
           "A splash of unidentified, putrid liquid falls from above, soaking you."
         ],
         [
-          "57–60",
+          "57\u201360",
           "The generally unpleasant smell of the lower wards is pierced by the scent of something delicious being baked nearby."
         ],
         [
-          "61–62",
+          "61\u201362",
           "A gnome sits at a table with a sign attached to it that reads, \"I say Breland would have won the Last War. Change my mind.\""
         ],
         [
-          "63–64",
+          "63\u201364",
           "Two {@creature changeling|ERLW|changelings} sit on a bench in front of a tavern, sharing a flask. They take turns changing their forms into the people who enter and exit the building."
         ],
         [
-          "65–66",
+          "65\u201366",
           "A human woman shouts at a group of Cyran refugees, \"Go home! Stop taking our jobs. Let the Mournland have you!\""
         ],
         [
-          "67–68",
+          "67\u201368",
           "A group of students from Morgrave University moves through the street, asking for directions to Dragoneyes."
         ],
         [
-          "69–72",
+          "69\u201372",
           "You turn down an empty street. A door suddenly materializes on a nearby building that previously showed no entrances."
         ],
         [
-          "73–74",
+          "73\u201374",
           "Faded graffiti on a wall reads, \"Need someone knifed? Tarkanan's got you covered!\""
         ],
         [
-          "75–76",
+          "75\u201376",
           "A crowd gathers around a {@creature kobold} playing a pan flute and leading a group of rats in a merry dance."
         ],
         [
-          "77–80",
+          "77\u201380",
           "Four {@creature Orc||orcs} jab at an {@creature ochre jelly} with long staffs, trying to herd the ooze into the sewers."
         ],
         [
-          "81–82",
+          "81\u201382",
           "Several Cyran refugees are gathered in a circle, singing a haunting song."
         ],
         [
-          "83–84",
+          "83\u201384",
           "An old {@creature goblin} offers to pierce your ears or nose for 5 copper crowns. She claims, \"It will be painless. I know magic!\""
         ],
         [
-          "85–86",
+          "85\u201386",
           "A figure in red robes preaches, \"The Last War was not the last! As long as the monarchy rules in Breland, another war is inevitable. Rise up!\""
         ],
         [
-          "87–90",
+          "87\u201390",
           "A member of the Sharn Watch looks uncomfortable as she wanders the street. It's clear she doesn't come down here often."
         ],
         [
-          "91–92",
+          "91\u201392",
           "Two humans run into an alley, drawing daggers as they go."
         ],
         [
-          "93–94",
+          "93\u201394",
           "Two drunken humans exit a tavern singing a Karrnathi battle hymn. Another human shouts at them to \"shut up or get shut up.\" The drunken pair sings louder in response."
         ],
         [
-          "95–96",
+          "95\u201396",
           "Two children reeking of sewage argue over who gets to wear a shiny helmet that sits on the ground between them."
         ],
         [
-          "97–00",
+          "97\u201300",
           "You find a pamphlet on the ground advertising the Silvermist Theater. Someone has scrawled on it, \"The real party is in the basement.\""
         ]
       ],
@@ -164,5 +164,14 @@
         "index": 11
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Random Events",
+  "tags": [
+    "Eberron",
+    "Sharn",
+    "Street Events",
+    "NPC Interactions",
+    "Urban Encounters"
   ]
 }
