--- a/data/tables/ERLW/xoriat_the_realm_of_madness_xoriat_manifest_zone_features.json
+++ b/data/tables/ERLW/xoriat_the_realm_of_madness_xoriat_manifest_zone_features.json
@@ -40,5 +40,14 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Locations & Features",
+  "tags": [
+    "Eberron",
+    "Xoriat",
+    "Manifest Zone",
+    "Madness",
+    "Adventure Building"
   ]
 }
