--- a/data/tables/ERLW/risia_the_plain_of_ice_risia_manifest_zone_features.json
+++ b/data/tables/ERLW/risia_the_plain_of_ice_risia_manifest_zone_features.json
@@ -40,5 +40,15 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Environment Features",
+  "tags": [
+    "Eberron",
+    "Risia",
+    "Manifest Zone",
+    "Ice",
+    "Cold Spells",
+    "Adventure Building"
   ]
 }
