--- a/data/tables/ERLW/thelanis_the_faerie_court_thelanis_manifest_zone_features.json
+++ b/data/tables/ERLW/thelanis_the_faerie_court_thelanis_manifest_zone_features.json
@@ -40,5 +40,14 @@
         "index": 10
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Locations",
+  "tags": [
+    "Eberron",
+    "Thelanis",
+    "Fey",
+    "Manifest Zone",
+    "Adventure Building"
   ]
 }
