--- a/data/tables/ERLW/what_happens_next_home_base.json
+++ b/data/tables/ERLW/what_happens_next_home_base.json
@@ -72,5 +72,14 @@
         "index": 11
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Locations",
+  "tags": [
+    "Eberron",
+    "Sharn",
+    "Home Base",
+    "Adventure Building",
+    "Dungeons & Dragons"
   ]
 }
