--- a/data/tables/ERLW/what_happens_next_skyway_street_events.json
+++ b/data/tables/ERLW/what_happens_next_skyway_street_events.json
@@ -72,5 +72,15 @@
         "index": 11
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "City Events",
+  "tags": [
+    "Eberron",
+    "Sharn",
+    "Skyway",
+    "Street Events",
+    "Adventure Hooks",
+    "Urban"
   ]
 }
