--- a/data/tables/ERLW/what_happens_next_upper_sharn_street_events.json
+++ b/data/tables/ERLW/what_happens_next_upper_sharn_street_events.json
@@ -12,151 +12,151 @@
       ],
       "rows": [
         [
-          "01–03",
+          "01\u201303",
           "A group of adventurers approaches, telling you to move along and stop trying to steal their business. (If the characters belong to the Deathsgate Guild or the Clifftop Adventurer's Guild, these could be members of the rival guild.)"
         ],
         [
-          "04–06",
+          "04\u201306",
           "Outside a House Kundarak bank, a human noble screams at a dragonmarked dwarf, \"What do you mean it's lost?\""
         ],
         [
-          "07–09",
+          "07\u201309",
           "A {@creature priest} of Kol Korran preaches to a crowd, saying, \"The best way to invest in yourself is to invest in your gods.\""
         ],
         [
-          "10–12",
+          "10\u201312",
           "An elf riding a {@creature pegasus} with bulging saddlebags asks you for directions to the Aurora Gallery."
         ],
         [
-          "13–15",
+          "13\u201315",
           "Two drunk dwarves pass a bottle of spirits back and forth and sing a bawdy song. Passersby are mortified."
         ],
         [
-          "16–18",
+          "16\u201318",
           "Two {@creature kalashtar|ERLW} play dragonchess at an outdoor table. They move pieces without touching them."
         ],
         [
-          "19–21",
+          "19\u201321",
           "A halfling chef stands in a large skycoach that is equipped with a stove, oven, and washbasin. Several spectral hands prepare and plate food as the chef serves a party of smiling customers."
         ],
         [
-          "22–25",
+          "22\u201325",
           "A {@creature harpy} decked out in colorful ribbons flies overhead, calling, \"Get the best deals on adventuring gear at Old Claggin's in Clifftop.\""
         ],
         [
-          "26–29",
+          "26\u201329",
           "Some Morgrave students follow their dwarf professor onto a lift as she says, \"Next stop: the Cogs!\""
         ],
         [
-          "30–32",
+          "30\u201332",
           "An out-of-breath gnome carrying bagpipes asks you for directions to Kavarrah Concert Hall."
         ],
         [
-          "33–35",
-          "A flustered gnome carries a stack of papers taller than he is—unaware of the plume of smoke coming from inside a scroll case slung on his back."
+          "33\u201335",
+          "A flustered gnome carries a stack of papers taller than he is\u2014unaware of the plume of smoke coming from inside a scroll case slung on his back."
         ],
         [
-          "36–38",
+          "36\u201338",
           "You walk by a shirtless elf tattooed from head to waist with images of dragons battling each other."
         ],
         [
-          "39–40",
+          "39\u201340",
           "A groomed {@creature hobgoblin} wearing a jeweled vest approaches you and says, \"Ah! Adventurers. Any interest in securing some Dhakaani relics for me?\""
         ],
         [
-          "41–42",
+          "41\u201342",
           "Someone has painted, \"The crown dies with Boranel!\" across the gates of a noble's mansion. A member of the Sharn Watch is talking to the household staff."
         ],
         [
-          "43–44",
+          "43\u201344",
           "A {@creature magewright|ERLW} offers to shine your shoes instantly with magic for 2 gold galifars, saying, \"You can't be seen with those dirty things up here.\""
         ],
         [
-          "45–46",
+          "45\u201346",
           "A human wearing the livery of House Vadalis struggles to carry a 3-foot-tall speckled blue egg down the street."
         ],
         [
-          "47–48",
+          "47\u201348",
           "An aasimar oracle approaches and promises to give you the answer to all the problems that ever existed for 42 gold galifars."
         ],
         [
-          "49–51",
+          "49\u201351",
           "A {@creature shifter|ERLW} with flowers in her hair and a wand in her hand offers to magically gild any item of clothing you wear for 20 gold galifars."
         ],
         [
-          "52–54",
+          "52\u201354",
           "Four warforged work together to operate an enormous tarrasque puppet as publicity for a new play at the Art Temple."
         ],
         [
-          "55–57",
+          "55\u201357",
           "A horrified crowd is gathered around a burning effigy of King Boranel. No one claims responsibility for the act."
         ],
         [
-          "58–60",
+          "58\u201360",
           "A human {@creature noble} is berating a warforged servant for losing her invitation to the next Tain Gala."
         ],
         [
-          "61–63",
+          "61\u201363",
           "A young {@creature noble} proposes to his boyfriend in a beautiful garden on a tower balcony. Nearby, a {@creature changeling|ERLW} looks on in tears."
         ],
         [
-          "64–66",
+          "64\u201366",
           "You walk down a path lined with trees on which are growing candy-coated apples."
         ],
         [
-          "67–70",
+          "67\u201370",
           "Three children sparring with wooden swords play dangerously close to the edge of a bridge."
         ],
         [
-          "71–73",
+          "71\u201373",
           "A {@creature kalashtar|ERLW} on the street approaches you, saying, \"I can help you talk with the dead. Is there anyone you miss?\""
         ],
         [
-          "74–76",
+          "74\u201376",
           "An artist offers to draw caricatures of everyone in your group at the same time by using several magically animated quills."
         ],
         [
-          "77–80",
+          "77\u201380",
           "You approach a fresco painted on the ground that depicts King Boranel ir'Wynarn. As you get closer, the fresco speaks, delivering an inspiring line taken from one of the king's speeches."
         ],
         [
-          "81–82",
+          "81\u201382",
           "A dragonborn standing near several soarsleds offers you a tour of upper Sharn's most impressive mansions."
         ],
         [
-          "83–84",
+          "83\u201384",
           "Two {@creature Noble||nobles}, one Aundairian and one Brelish, heatedly debate which of their countries would have won the war had it been fought to a conclusion."
         ],
         [
-          "85–86",
+          "85\u201386",
           "A gilded warforged plays a sad song on a trumpet, honoring those who fell during the Last War."
         ],
         [
-          "87–88",
+          "87\u201388",
           "A group of well-outfitted adventurers snicker and whisper to each other as you pass."
         ],
         [
-          "89–90",
+          "89\u201390",
           "You turn a corner and notice a shifter who immediately puts her hands in her pockets and starts whistling, obviously trying to act inconspicuous."
         ],
         [
-          "91–92",
+          "91\u201392",
           "A {@creature pseudodragon} flies out of a nearby bush. As the playful creature licks your faces, you notice it wears a collar engraved with the letter M."
         ],
         [
-          "93–94",
+          "93\u201394",
           "You walk past a placid pond in a small park filled with colorful fish. An attendant removes dead fish from the water with a net."
         ],
         [
-          "95–96",
+          "95\u201396",
           "You come near a mansion, and an illusion of an old man dressed in noble finery appears. \"Get off my lawn!\" the figure gripes."
         ],
         [
-          "97–98",
+          "97\u201398",
           "An elf child with a {@creature faerie dragon (red)||faerie dragon} on a leash walks toward you and asks if you'd like to touch the exotic pet."
         ],
         [
-          "99–00",
+          "99\u201300",
           "You find a small brass key on the ground that glows blue whenever it is touched."
         ]
       ],
@@ -172,5 +172,14 @@
         "index": 11
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Event Tables",
+  "tags": [
+    "Eberron",
+    "Sharn",
+    "Street Events",
+    "Adventure Building",
+    "Random Events"
   ]
 }
