--- a/data/tables/FRAiF/commoner_crew_renown.json
+++ b/data/tables/FRAiF/commoner_crew_renown.json
@@ -43,5 +43,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Renown & Reputation",
+  "tags": [
+    "Baldur's Gate",
+    "Commoner Crew",
+    "Renown Score",
+    "Rewards",
+    "Reputation"
   ]
 }
