--- a/data/tables/FRAiF/jarl_olfsvenn_renown.json
+++ b/data/tables/FRAiF/jarl_olfsvenn_renown.json
@@ -47,5 +47,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "NPC Interactions",
+  "tags": [
+    "Renown",
+    "Rewards",
+    "Jarl Olfsvenn",
+    "Moonshae Isles",
+    "NPC"
   ]
 }
