--- a/data/tables/FRAiF/kendrick_family_renown.json
+++ b/data/tables/FRAiF/kendrick_family_renown.json
@@ -43,5 +43,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Factions & Reputation",
+  "tags": [
+    "Renown",
+    "Rewards",
+    "Moonshae Isles",
+    "Kendrick Family",
+    "Faction"
   ]
 }
