--- a/data/tables/FRAiF/the_flaming_fist_flaming_fist_renown.json
+++ b/data/tables/FRAiF/the_flaming_fist_flaming_fist_renown.json
@@ -51,5 +51,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Factions & Renown",
+  "tags": [
+    "Flaming Fist",
+    "Renown Score",
+    "Rewards",
+    "Baldur's Gate",
+    "Faction Rewards"
   ]
 }
