--- a/data/tables/FRAiF/the_guild_guild_renown.json
+++ b/data/tables/FRAiF/the_guild_guild_renown.json
@@ -51,5 +51,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Guilds & Organizations",
+  "tags": [
+    "Guild Renown",
+    "Rewards",
+    "Baldur's Gate",
+    "Renown Score",
+    "Guild"
   ]
 }
