--- a/data/tables/FRHoF/cult_of_the_dragon_renown.json
+++ b/data/tables/FRHoF/cult_of_the_dragon_renown.json
@@ -55,5 +55,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Factions",
+  "tags": [
+    "Cult of the Dragon",
+    "Renown",
+    "Rewards",
+    "Factions of the Realms",
+    "Ranking"
   ]
 }
