--- a/data/tables/FRAiF/dale_renown.json
+++ b/data/tables/FRAiF/dale_renown.json
@@ -51,5 +51,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Renown and Rewards",
+  "tags": [
+    "Dalelands",
+    "Renown Score",
+    "Rewards",
+    "NPC Interaction",
+    "Roleplay"
   ]
 }
