--- a/data/tables/FRAiF/genie_factions_genie_renown.json
+++ b/data/tables/FRAiF/genie_factions_genie_renown.json
@@ -51,5 +51,14 @@
         "index": 4
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Factions & Renown",
+  "tags": [
+    "Genie",
+    "Renown Score",
+    "Rewards",
+    "Calimshan",
+    "Factions"
   ]
 }
