--- a/data/tables/FRAiF/high_lady_ordalf_renown.json
+++ b/data/tables/FRAiF/high_lady_ordalf_renown.json
@@ -43,5 +43,15 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Renown Rewards",
+  "tags": [
+    "High Lady Ordalf",
+    "Moonshae Isles",
+    "Renown Score",
+    "Fey",
+    "Magic Items",
+    "Friendly Attitude"
   ]
 }
