--- a/data/tables/FRHoF/emerald_enclave_renown.json
+++ b/data/tables/FRHoF/emerald_enclave_renown.json
@@ -55,5 +55,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Factions",
+  "tags": [
+    "Emerald Enclave",
+    "Renown",
+    "Rewards",
+    "Factions of the Realms",
+    "Player Resources"
   ]
 }
