--- a/data/tables/FRHoF/order_of_the_gauntlet_renown.json
+++ b/data/tables/FRHoF/order_of_the_gauntlet_renown.json
@@ -55,5 +55,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Factions",
+  "tags": [
+    "Order of the Gauntlet",
+    "Renown",
+    "Rewards",
+    "Factions of the Realms",
+    "Player Resources"
   ]
 }
