--- a/data/tables/FRHoF/red_wizards_renown.json
+++ b/data/tables/FRHoF/red_wizards_renown.json
@@ -55,5 +55,15 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Factions",
+  "tags": [
+    "Red Wizards",
+    "Renown",
+    "Rewards",
+    "Thayan",
+    "Magic Items",
+    "Factions of the Realms"
   ]
 }
