--- a/data/tables/FRHoF/renown_rewards_purple_dragon_knights_renown.json
+++ b/data/tables/FRHoF/renown_rewards_purple_dragon_knights_renown.json
@@ -55,5 +55,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Factions",
+  "tags": [
+    "Renown Rewards",
+    "Purple Dragon Knights",
+    "Factions of the Realms",
+    "Rewards",
+    "Renown Score"
   ]
 }
