--- a/data/tables/FRHoF/zhentarim_renown.json
+++ b/data/tables/FRHoF/zhentarim_renown.json
@@ -55,5 +55,15 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Factions",
+  "tags": [
+    "Zhentarim",
+    "Renown",
+    "Rewards",
+    "Factions of the Realms",
+    "Titles",
+    "Advantages"
   ]
 }
