--- a/data/tables/FTD/connected_creatures_adult_sapphire_dragon_connections.json
+++ b/data/tables/FTD/connected_creatures_adult_sapphire_dragon_connections.json
@@ -56,5 +56,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Adventure Creation",
+  "tags": [
+    "Adult Sapphire Dragon",
+    "Connected Creatures",
+    "Draconomicon",
+    "Dragon's Lair",
+    "Creature Interactions"
   ]
 }
