--- a/data/tables/FTD/blue_dragon_treasures_blue_dragon_art_objects.json
+++ b/data/tables/FTD/blue_dragon_treasures_blue_dragon_art_objects.json
@@ -56,5 +56,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Blue Dragon",
+    "Art Objects",
+    "Treasures",
+    "Draconomicon",
+    "Loot"
   ]
 }
