--- a/data/tables/FTD/brass_dragon_treasures_brass_dragon_art_objects.json
+++ b/data/tables/FTD/brass_dragon_treasures_brass_dragon_art_objects.json
@@ -64,5 +64,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Monsters",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Brass Dragon",
+    "Treasures",
+    "Art Objects",
+    "Draconomicon",
+    "Loot"
   ]
 }
