--- a/data/tables/FTD/connected_creatures_young_sapphire_dragon_connections.json
+++ b/data/tables/FTD/connected_creatures_young_sapphire_dragon_connections.json
@@ -48,5 +48,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Adventure Creation",
+  "tags": [
+    "Sapphire Dragon",
+    "Creature Connections",
+    "Draconomicon",
+    "Encounter Tables",
+    "Dragon"
   ]
 }
