--- a/data/tables/FTD/crystal_dragon_treasures_crystal_dragon_art_objects.json
+++ b/data/tables/FTD/crystal_dragon_treasures_crystal_dragon_art_objects.json
@@ -72,5 +72,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Crystal Dragon",
+    "Art Objects",
+    "Draconomicon",
+    "Treasures",
+    "Loot"
   ]
 }
