--- a/data/tables/FTD/dragon_turtle_treasures_dragon_turtle_art_objects.json
+++ b/data/tables/FTD/dragon_turtle_treasures_dragon_turtle_art_objects.json
@@ -64,5 +64,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Dragon Turtle",
+    "Treasures",
+    "Art Objects",
+    "Draconomicon",
+    "Loot"
   ]
 }
