--- a/data/tables/FTD/faerie_dragon_treasures_faerie_dragon_art_objects.json
+++ b/data/tables/FTD/faerie_dragon_treasures_faerie_dragon_art_objects.json
@@ -56,5 +56,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Faerie Dragon",
+    "Art Objects",
+    "Draconomicon",
+    "Loot",
+    "Treasure"
   ]
 }
