--- a/data/tables/FTD/creating_a_sapphire_dragon_sapphire_dragon_ideals.json
+++ b/data/tables/FTD/creating_a_sapphire_dragon_sapphire_dragon_ideals.json
@@ -48,5 +48,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Monsters",
+  "sub_category": "Monster Personality",
+  "tags": [
+    "Sapphire Dragon",
+    "Draconomicon",
+    "Ideals",
+    "Character Creation",
+    "Role-playing"
   ]
 }
