--- a/data/tables/FTD/creating_a_sapphire_dragon_sapphire_dragon_personality_traits.json
+++ b/data/tables/FTD/creating_a_sapphire_dragon_sapphire_dragon_personality_traits.json
@@ -56,5 +56,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Monsters",
+  "sub_category": "Monster Personality",
+  "tags": [
+    "Sapphire Dragon",
+    "Personality Traits",
+    "Draconomicon",
+    "Creating Monsters",
+    "Dragon Traits"
   ]
 }
