--- a/data/tables/FTD/emerald_dragon_treasures_emerald_dragon_art_objects.json
+++ b/data/tables/FTD/emerald_dragon_treasures_emerald_dragon_art_objects.json
@@ -64,5 +64,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Emerald Dragon",
+    "Art Objects",
+    "Draconomicon",
+    "Loot",
+    "Treasure"
   ]
 }
