--- a/data/tables/FTD/red_dragon_treasures_red_dragon_art_objects.json
+++ b/data/tables/FTD/red_dragon_treasures_red_dragon_art_objects.json
@@ -72,5 +72,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Red Dragon",
+    "Art Objects",
+    "Treasures",
+    "Draconomicon",
+    "Loot"
   ]
 }
