--- a/data/tables/FTD/sapphire_dragon_treasures_sapphire_dragon_art_objects.json
+++ b/data/tables/FTD/sapphire_dragon_treasures_sapphire_dragon_art_objects.json
@@ -48,5 +48,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "Sapphire Dragon",
+    "Art Objects",
+    "Draconomicon",
+    "Loot",
+    "Treasure"
   ]
 }
