--- a/data/tables/FTD/white_dragon_treasures_white_dragon_art_objects.json
+++ b/data/tables/FTD/white_dragon_treasures_white_dragon_art_objects.json
@@ -72,5 +72,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Art Objects",
+  "tags": [
+    "White Dragon",
+    "Art Objects",
+    "Draconomicon",
+    "Loot",
+    "Treasure"
   ]
 }
