--- a/data/tables/GGR/pack_beasts.json
+++ b/data/tables/GGR/pack_beasts.json
@@ -44,5 +44,14 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Monsters",
+  "sub_category": "Beasts",
+  "tags": [
+    "Pack Beasts",
+    "Monster Manual",
+    "Friends and Foes",
+    "Creature Stats",
+    "Campaign Resources"
   ]
 }
