--- a/data/tables/MaBJoV/magic_item_transmutation_item_transmutation_components_and_costs.json
+++ b/data/tables/MaBJoV/magic_item_transmutation_item_transmutation_components_and_costs.json
@@ -88,5 +88,14 @@
         "index": 3
       }
     }
+  ],
+  "top_category": "Equipment",
+  "sub_category": "Magic Items",
+  "tags": [
+    "Transmutation",
+    "Components",
+    "Costs",
+    "Arcana Check",
+    "Material Component Cost"
   ]
 }
