--- a/data/tables/MPP/outlands_beasts.json
+++ b/data/tables/MPP/outlands_beasts.json
@@ -36,5 +36,15 @@
         "index": 0
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Encounters",
+  "tags": [
+    "Outlands",
+    "Encounters",
+    "Multiversal Menagerie",
+    "Creature",
+    "Awakened Creatures",
+    "Influenced Creatures"
   ]
 }
