--- a/data/tables/PSD/llanowar_sites.json
+++ b/data/tables/PSD/llanowar_sites.json
@@ -60,5 +60,14 @@
         "index": 8
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Locations",
+  "tags": [
+    "Elves",
+    "Llanowar",
+    "Adventure Sites",
+    "Forest",
+    "Trees"
   ]
 }
