--- a/data/tables/PSD/llanowar_villains.json
+++ b/data/tables/PSD/llanowar_villains.json
@@ -52,5 +52,15 @@
         "index": 8
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "NPCs",
+  "tags": [
+    "Elves",
+    "Llanowar",
+    "Villains",
+    "NPC",
+    "Campaign",
+    "Storytelling"
   ]
 }
