--- a/data/tables/SAC/how_do_i_know_which_ability_modifier_to_use_with_an_attack_roll_and_its_damage_roll.json
+++ b/data/tables/SAC/how_do_i_know_which_ability_modifier_to_use_with_an_attack_roll_and_its_damage_roll.json
@@ -35,5 +35,15 @@
         "index": 0
       }
     }
+  ],
+  "top_category": "Rules",
+  "sub_category": "Combat Mechanics",
+  "tags": [
+    "Attack Roll",
+    "Damage Roll",
+    "Ability Modifier",
+    "Melee Weapon",
+    "Ranged Weapon",
+    "Spellcasting"
   ]
 }
