--- a/data/tables/SCAG/the_shifting_of_the_seasons_the_calendar_of_harptos.json
+++ b/data/tables/SCAG/the_shifting_of_the_seasons_the_calendar_of_harptos.json
@@ -116,5 +116,14 @@
         "index": 1
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Calendar & Timekeeping",
+  "tags": [
+    "Harptos",
+    "Seasons",
+    "Calendar",
+    "Time",
+    "Realms"
   ]
 }
