--- a/data/tables/PSD/llanowar_quests.json
+++ b/data/tables/PSD/llanowar_quests.json
@@ -21,7 +21,7 @@
         ],
         [
           "3",
-          "Carry a message to a Benalish city—about diplomacy, trade, matters of the heart, or anything else."
+          "Carry a message to a Benalish city\u2014about diplomacy, trade, matters of the heart, or anything else."
         ],
         [
           "4",
@@ -44,5 +44,15 @@
         "index": 8
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Quests",
+  "tags": [
+    "Elves",
+    "Llanowar",
+    "Quests",
+    "Diplomacy",
+    "Trade",
+    "Phyrexian"
   ]
 }
