--- a/data/tables/ScreenDungeonKit/screen_obscured_areas.json
+++ b/data/tables/ScreenDungeonKit/screen_obscured_areas.json
@@ -31,5 +31,14 @@
         "index": 0
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Environment",
+  "tags": [
+    "Screen",
+    "Obscured Areas",
+    "Visibility",
+    "Effects",
+    "Conditions"
   ]
 }
