--- a/data/tables/TCE/monsters_desires_beasts.json
+++ b/data/tables/TCE/monsters_desires_beasts.json
@@ -40,5 +40,12 @@
         "index": 4
       }
     }
+  ],
+  "top_category": "Monsters",
+  "sub_category": "Monster Personality",
+  "tags": [
+    "Beasts",
+    "Desires",
+    "Offerings"
   ]
 }
