--- a/data/tables/ToA/cyclops_treasure_drops.json
+++ b/data/tables/ToA/cyclops_treasure_drops.json
@@ -128,5 +128,14 @@
         "index": 7
       }
     }
+  ],
+  "top_category": "Monsters",
+  "sub_category": "Treasure Drops",
+  "tags": [
+    "Cyclops",
+    "Random Encounters",
+    "Loot",
+    "Treasure",
+    "Equipment"
   ]
 }
