--- a/data/tables/VGM/treasure_orc_trophies.json
+++ b/data/tables/VGM/treasure_orc_trophies.json
@@ -67,5 +67,14 @@
         "index": 0
       }
     }
+  ],
+  "top_category": "Monsters",
+  "sub_category": "Monster Lore",
+  "tags": [
+    "Treasure",
+    "Orc",
+    "Trophies",
+    "Loot",
+    "Monster Drops"
   ]
 }
