--- a/data/tables/VRGR/dark_fantasy_settings.json
+++ b/data/tables/VRGR/dark_fantasy_settings.json
@@ -56,5 +56,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Campaigns",
+  "sub_category": "Setting Creation",
+  "tags": [
+    "Dark Fantasy",
+    "Domains of Dread",
+    "Setting Ideas",
+    "Campaign Design",
+    "World Building"
   ]
 }
