--- a/data/tables/VRGR/folk_horror_settings.json
+++ b/data/tables/VRGR/folk_horror_settings.json
@@ -48,5 +48,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Setting Creation",
+  "tags": [
+    "Domains of Dread",
+    "Folk Horror",
+    "Settings",
+    "World Building",
+    "Campaigns"
   ]
 }
