--- a/data/tables/VRGR/ghost_story_settings.json
+++ b/data/tables/VRGR/ghost_story_settings.json
@@ -56,5 +56,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Story Settings",
+  "tags": [
+    "Ghost Stories",
+    "Domains of Dread",
+    "Storytelling",
+    "Campaign Settings",
+    "Roleplay"
   ]
 }
