--- a/data/tables/VRGR/benefits_of_renown_rebel_benefits.json
+++ b/data/tables/VRGR/benefits_of_renown_rebel_benefits.json
@@ -16,52 +16,52 @@
         [
           "1",
           "Moving unimpeded through rebel-controlled territory",
-          "—"
+          "\u2014"
         ],
         [
           "1",
           "Learning if a wealthy individual has been courted by the rebels in the past month",
-          "—"
+          "\u2014"
         ],
         [
           "3",
           "Learning where Arijani and Reeva are encamped",
-          "—"
+          "\u2014"
         ],
         [
           "5",
           "Gaining a private audience with both Arijani and Reeva",
-          "—"
+          "\u2014"
         ],
         [
           "7",
           "Gaining a private audience with either Arijani or Reeva",
-          "—"
+          "\u2014"
         ],
         [
           "10",
           "Obtaining an invitation to one of Arijani and Reeva's galas",
-          "–4"
+          "\u20134"
         ],
         [
           "15",
           "Convincing the faction to heed advice",
-          "–2"
+          "\u20132"
         ],
         [
           "15",
           "Convincing the faction to heed advice seemingly counter to its interests",
-          "–5"
+          "\u20135"
         ],
         [
           "20",
           "Obtaining an invitation to one of Arijani and Reeva's private feasts",
-          "–5"
+          "\u20135"
         ],
         [
           "25",
           "Convincing Reeva to reveal secrets hidden under the Cerulean Citadel",
-          "–5"
+          "\u20135"
         ]
       ],
       "name": "Benefits of Renown; Rebel Benefits",
@@ -76,5 +76,14 @@
         "index": 3
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Factions & Reputation",
+  "tags": [
+    "Renown",
+    "Rebels",
+    "Domains of Ravenloft",
+    "NPC Interaction",
+    "Information Gathering"
   ]
 }
