--- a/data/tables/VRGR/body_horror_settings.json
+++ b/data/tables/VRGR/body_horror_settings.json
@@ -56,5 +56,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Campaigns",
+  "sub_category": "Domains of Dread",
+  "tags": [
+    "Body Horror",
+    "Settings",
+    "Horror",
+    "Campaign Creation",
+    "Dread"
   ]
 }
