--- a/data/tables/VRGR/cosmic_horror_settings.json
+++ b/data/tables/VRGR/cosmic_horror_settings.json
@@ -56,5 +56,15 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Campaigns",
+  "sub_category": "Setting Creation",
+  "tags": [
+    "Cosmic Horror",
+    "Domains of Dread",
+    "Setting",
+    "Campaign Building",
+    "Horror",
+    "Dungeons & Dragons"
   ]
 }
