--- a/data/tables/XDMG/adjudicating_areas_of_effect_targets_in_area_of_effect.json
+++ b/data/tables/XDMG/adjudicating_areas_of_effect_targets_in_area_of_effect.json
@@ -127,5 +127,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Rules",
+  "sub_category": "Combat",
+  "tags": [
+    "Area of Effect",
+    "Targets",
+    "Adjudication",
+    "DM's Toolbox",
+    "Combat"
   ]
 }
