--- a/data/tables/XDMG/happenstance_hooks.json
+++ b/data/tables/XDMG/happenstance_hooks.json
@@ -48,5 +48,13 @@
         "index": 3
       }
     }
+  ],
+  "top_category": "Adventuring",
+  "sub_category": "Hooks",
+  "tags": [
+    "Adventure Hooks",
+    "Storytelling",
+    "Campaign Building",
+    "DM Tools"
   ]
 }
