--- a/data/tables/XDMG/level_based_renown.json
+++ b/data/tables/XDMG/level_based_renown.json
@@ -44,5 +44,13 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "DM Tools",
+  "sub_category": "Game Mechanics",
+  "tags": [
+    "Renown",
+    "Levels",
+    "Character Development",
+    "DM's Toolbox"
   ]
 }
