--- a/data/tables/XDMG/layers_of_the_beastlands.json
+++ b/data/tables/XDMG/layers_of_the_beastlands.json
@@ -36,5 +36,14 @@
         "index": 5
       }
     }
+  ],
+  "top_category": "Lore",
+  "sub_category": "Cosmology",
+  "tags": [
+    "Beastlands",
+    "Planes",
+    "Cosmology",
+    "Layers",
+    "Wilderness"
   ]
 }
