--- a/data/tables/XDMG/npc_appearance.json
+++ b/data/tables/XDMG/npc_appearance.json
@@ -72,5 +72,14 @@
         "index": 2
       }
     }
+  ],
+  "top_category": "Campaigns",
+  "sub_category": "NPCs",
+  "tags": [
+    "NPC",
+    "Appearance",
+    "Character Design",
+    "Roleplay",
+    "Storytelling"
   ]
 }
