--- a/data/tables/XDMG/random_individual_treasure.json
+++ b/data/tables/XDMG/random_individual_treasure.json
@@ -40,5 +40,14 @@
         "index": 3
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Treasure",
+  "tags": [
+    "Random",
+    "Individual Treasure",
+    "Creating Adventures",
+    "Gold Pieces",
+    "Platinum Pieces"
   ]
 }
