--- a/data/tables/XDMG/treasure.json
+++ b/data/tables/XDMG/treasure.json
@@ -51,5 +51,14 @@
         "index": 7
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Treasure",
+  "tags": [
+    "Treasure",
+    "Loot",
+    "Art Objects",
+    "Magic Items",
+    "Bastions"
   ]
 }
