--- a/data/tables/XDMG/using_a_published_setting_d_d_settings.json
+++ b/data/tables/XDMG/using_a_published_setting_d_d_settings.json
@@ -75,5 +75,16 @@
         "index": 4
       }
     }
+  ],
+  "top_category": "Campaigns",
+  "sub_category": "Settings",
+  "tags": [
+    "D&D Settings",
+    "Campaign Creation",
+    "Dark Sun",
+    "Dragonlance",
+    "Eberron",
+    "Exandria",
+    "Forgotten Realms"
   ]
 }
