--- a/data/tables/XDMG/treasure_hoards_random_treasure_hoard.json
+++ b/data/tables/XDMG/treasure_hoards_random_treasure_hoard.json
@@ -46,5 +46,14 @@
         "index": 3
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Treasure",
+  "tags": [
+    "Treasure",
+    "Loot",
+    "Random",
+    "Magic Items",
+    "Monetary Treasure"
   ]
 }
