--- a/data/tables/XDMG/treasure_themes.json
+++ b/data/tables/XDMG/treasure_themes.json
@@ -40,5 +40,15 @@
         "index": 6
       }
     }
+  ],
+  "top_category": "Treasure & Loot",
+  "sub_category": "Treasure",
+  "tags": [
+    "Arcana",
+    "Armaments",
+    "Implements",
+    "Relics",
+    "Magic Items",
+    "Coins"
   ]
 }
